--- a/app/src/main/res/layout/activity_series_detalles.xml
+++ b/app/src/main/res/layout/activity_series_detalles.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -16,15 +17,29 @@
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"></TextView>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
+        <ImageView
+            android:id="@+id/imgSerieDetalle"
+            android:layout_width="200dp"
+            android:layout_height="212dp"
+            android:layout_gravity="center"
+            android:paddingTop="10dp"
+            android:src="@mipmap/ic_launcher_round"></ImageView>
 
-    <ImageView
-        android:id="@+id/imgSerieDetalle"
-        android:layout_width="200dp"
-        android:layout_height="195dp"
-        android:layout_gravity="center"
-        android:paddingTop="10dp"
-        android:src="@mipmap/ic_launcher_round"></ImageView>
 
+        <ImageView
+            android:id="@+id/imgEstrellaSerie"
+            android:layout_width="187dp"
+            android:layout_height="127dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imgSerieDetalle"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@drawable/estrella_5" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
@@ -101,6 +116,8 @@
         android:text="TextView"
         android:textColor="@color/white"
         android:textSize="18sp" />
+
+
 
 
 </LinearLayout>
