--- a/app/src/main/res/layout/activity_cine_detalles.xml
+++ b/app/src/main/res/layout/activity_cine_detalles.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,14 +18,29 @@
         android:textColor="@color/white"
         android:textSize="30sp"
         android:textStyle="bold"></TextView>
-
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
     <ImageView
-        android:id="@+id/imgSerieDetalle"
+        android:id="@+id/imgPeliculaDetalle"
         android:layout_width="200dp"
         android:layout_height="212dp"
         android:layout_gravity="center"
         android:paddingTop="10dp"
         android:src="@mipmap/ic_launcher_round"></ImageView>
+
+
+        <ImageView
+            android:id="@+id/imgEstrellaCine"
+            android:layout_width="187dp"
+            android:layout_height="127dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imgPeliculaDetalle"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@drawable/estrella_5" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/textView2"
@@ -37,7 +53,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/txtDirectorSeries"
+        android:id="@+id/txtDirectorPelicula"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -56,7 +72,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/txtRepartoSeries"
+        android:id="@+id/txtRepartoPelicula"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -75,7 +91,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/txtSinopsisSeries"
+        android:id="@+id/txtSinopsisPelicula"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
